--- a/BoulderDash2019/BoulderDash2019.csproj
+++ b/BoulderDash2019/BoulderDash2019.csproj
@@ -43,12 +43,27 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\LevelController.cs" />
+    <Compile Include="Level\LevelData.cs" />
+    <Compile Include="Models\Boulder.cs" />
+    <Compile Include="Models\Diamond.cs" />
+    <Compile Include="Models\Firefly.cs" />
+    <Compile Include="Models\HardenedMud.cs" />
+    <Compile Include="Models\Level.cs" />
+    <Compile Include="Models\Mud.cs" />
+    <Compile Include="Models\Player.cs" />
+    <Compile Include="Models\Tile.cs" />
+    <Compile Include="Models\TileObject.cs" />
+    <Compile Include="Models\TNT.cs" />
+    <Compile Include="Models\Wall.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Views\GameView.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
