--- a/BoulderDash2019/BoulderDash2019.csproj
+++ b/BoulderDash2019/BoulderDash2019.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Controllers\LevelController.cs" />
     <Compile Include="Enum\Movement.cs" />
     <Compile Include="Level\LevelData.cs" />
+    <Compile Include="Models\BlankTile.cs" />
     <Compile Include="Models\Boulder.cs" />
     <Compile Include="Models\Diamond.cs" />
     <Compile Include="Models\EmptyTile.cs" />
@@ -55,6 +56,7 @@
     <Compile Include="Models\Moveable.cs" />
     <Compile Include="Models\Mud.cs" />
     <Compile Include="Models\Player.cs" />
+    <Compile Include="Models\Slideable.cs" />
     <Compile Include="Models\Steelwall.cs" />
     <Compile Include="Models\Tile.cs" />
     <Compile Include="Models\TNT.cs" />
