--- a/BoulderDash2019/BoulderDash2019.csproj
+++ b/BoulderDash2019/BoulderDash2019.csproj
@@ -48,6 +48,8 @@
     <Compile Include="Level\LevelData.cs" />
     <Compile Include="Models\BlankTile.cs" />
     <Compile Include="Models\Boulder.cs" />
+    <Compile Include="Models\Crush.cs" />
+    <Compile Include="Models\Crushable.cs" />
     <Compile Include="Models\Diamond.cs" />
     <Compile Include="Models\EmptyTile.cs" />
     <Compile Include="Models\Firefly.cs" />
