--- a/BoulderDash2019/BoulderDash2019.csproj
+++ b/BoulderDash2019/BoulderDash2019.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Models\Wall.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Views\EndView.cs" />
     <Compile Include="Views\GameView.cs" />
   </ItemGroup>
   <ItemGroup>
